# rust-password-encrypter

./: .gitignore  Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  index.tsx  lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  data.enc  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/encryption/: encryt.rs  mod.rs
src/components/: BottomRight.tsx  FirstPage.tsx  NavLink.tsx  PasswordTable.tsx  Sidebar.tsx  TopRight.tsx
src/encrypt/: encryt.rs
src/pages/: ActualVault.tsx  Create.tsx  Edit.tsx  default.tsx  test.tsx
src/store/: constant.tsx  sharedState.tsx
ui/: app-window.slint  global.slint  modal-window.slint
ui/icons/: icons.slint
