[package]
name = "creds-app-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.100"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
rand = "0.9.2"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = "1.14.1"


[build-dependencies]
slint-build = "1.14.1"
